--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,10 @@ __pycache__/
 *.py[cod]
 *$py.class
 
+#Test Images
+*.jpg
+*.JPG
+
 # C extensions
 *.so
 
@@ -127,4 +131,3 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
-
